@@ -36,9 +36,11 @@ use Mojo::Base -base, -signatures;
 has 'db';
 has 'context';
 has 'error';
-
+has 'activity_data';
+has 'model';
 
 1;
+
 
 
 #################### pod generated by Pod::Autopod - keep this line to make pod updates possible ####################
