@@ -26,12 +26,13 @@ use Mojo::Base -base, -signatures;
 # janeskil1525 E<lt>janeskil1525@gmail.comE<gt>
 #
 
-our $VERSION = "0.01";
+our $VERSION = "0.03";
 
 
 
 1;
 __END__
+
 
 
 
