@@ -33,8 +33,10 @@ use Mojo::Base -base, -signatures;
 has 'context';
 has 'checks';
 has 'error';
+has 'model';
 
 1;
+
 
 
 #################### pod generated by Pod::Autopod - keep this line to make pod updates possible ####################
